[package]
name = "newsletter"
version = "0.1.0"
authors = ["Claire Jung <83348294+changerlemond@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
config = "0.13.0"
actix-web = "4"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
reqwest = "0.12.4"
serde = {version = "1", features = ["derive"]}
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]